Resurect Integration tests ...
* Merge internal with integration tests
* Add -Xmx512m -XX:MaxPermSize=256m for managed jboss instance
* Ignore a few CDI related integration tests

Status (unchanged)
------------------

* Smoke Tests run: 61, Failures: 0, Errors: 0, Skipped: 17
* Specification Tests run: 23, Failures: 0, Errors: 0, Skipped: 3
* Integration Tests run: 148, Failures: 0, Errors: 0, Skipped: 26
* OSGi tests not working because arquillian service not registered with OSGi layer
* JSF testing disabled because its dependency on the servlet protocol