@@ -36,19 +36,22 @@
     <artifactId>jboss-as-testsuite</artifactId>
     <version>7.0.0.Beta4-SNAPSHOT</version>
 
-    <name>JBoss Application Server: Test Suite: Aggregator</name>
+    <name>JBoss Application Server Test Suite: Aggregator</name>
 
     <modules>
+        <!-- 
         <module>api</module>
-        <module>internals</module>
+        -->
         <module>smoke</module>
         <module>spec</module>
+        <!-- [AS7-734] move to allTests profile when done -->
+        <module>integration</module>
     </modules>
 
     <packaging>pom</packaging>
 
     <properties>
-        <surefire.memory.args>-Xmx512m</surefire.memory.args>
+        <surefire.memory.args>-Xmx512m -XX:MaxPermSize=256m</surefire.memory.args>
         <surefire.jpda.args></surefire.jpda.args>
         <surefire.system.args>${surefire.memory.args} ${surefire.jpda.args}</surefire.system.args>
         <jboss.home>${project.basedir}/../../build/target/jboss-${jboss.as.release.version}</jboss.home>
@@ -65,6 +68,11 @@
                 <artifactId>org.osgi.foundation</artifactId>
               </exclusion>
             </exclusions>
+        </dependency>
+        <!-- Needed for @Resource(lookup=) -->
+        <dependency>
+           <groupId>org.jboss.spec.javax.annotation</groupId>
+           <artifactId>jboss-annotations-api_1.1_spec</artifactId>
         </dependency>
         <dependency>
           <groupId>org.jboss.arquillian.container</groupId>
@@ -130,7 +138,7 @@
                             <overwrite>true</overwrite>
                             <resources>
                                 <resource>
-                                    <directory>${basedir}/../../build/target/jboss-${project.version}</directory>
+                                    <directory>${jboss.home}</directory>
                                     <includes>
                                         <include>**</include>
                                     </includes>
@@ -148,6 +156,10 @@
                     <parallel>none</parallel>
                     -->
                     <systemProperties>
+                        <property>
+                          <name>jboss.options</name>
+                          <value>${surefire.system.args}</value>
+                        </property>
                         <property>
                           <name>java.util.logging.manager</name>
                           <value>org.jboss.logmanager.LogManager</value>
@@ -178,7 +190,9 @@
             <modules>
                 <module>stress</module>
                 <module>benchmark</module>
+                <!-- 
                 <module>integration</module>
+                -->
             </modules>
         </profile>
         
